# pocket-rag-cli

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/docs/: README_EN.md  README_FR.md
docs/: README_EN.md  README_FR.md
src/: chunk_builder.py  config_manager.py  groq_query.py  main.py  prompt.py  vector_db.py
