[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[project]
name = "pocket-rag"
version = "0.1.0"
description = "A CLI tool to do local RAG and query documents"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

authors = [
    { name = "Ulrich Tanguy", email = "nythique@proton.com" }
]

dependencies = [
    "groq==1.4.0",
    "chromadb==1.5.9",
    "python-dotenv==1.2.2",
    "rich==15.0.0",
    "pymupdf==1.27.2.3",
    "python-docx==1.2.0",
    "click==8.4.1",
]

[project.scripts]
pocket-rag = "src.main:cli"